--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">smartFridge</string>
+    <string name="app_name">Food data</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
+    <string name="first_fragment_label">Smart Fridge Data</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
@@ -10,6 +10,9 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
-    <string name = "humidity">humidity</string>
-    <string name = "temperature">temperature</string>
+    <string name="humidity">Humidity</string>
+    <string name="temperature">Temperature</string>
+
+    <string name="loading">Loading..</string>
+
 </resources>
