--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,7 @@
     <string name="temperature">Temperature</string>
 
     <string name="loading">Loading..</string>
+    <string name="items"><u>Items</u></string>
+
 
 </resources>
